[package]
name = "rust-pm-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
clap = "4.4"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"